--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,3 @@
-.parallax {
-    /* The image used */
-    background-image: url("https://img.freepik.com/free-vector/abstract-blue-geometric-shapes-background_1035-17545.jpg");
-  
-    /* Set a specific height */
-    min-height: 500px;
-  
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 .card {
     border: 0 px solid black;
@@ -31,4 +18,30 @@
     float: right;
 }
 
+#clothes, #grocery {
+    background-image: url("../images/parallax.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+#beauty {
+    background-image: url("../images/parallaxB.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+.titleCheckout {
+    color:#0d6efd
+
+}
+
+.txttitle {
+    color:white;
+
+}
